# pygradethis

./: .gitignore  README.md  check_functions.py  formatters.py  grade_code.py  pygradethis.Rproj  pyproject.toml  python_grade_learnr.py  setup.py  setup_instructions_python.md  use_grader.py
.github/ISSUE_TEMPLATE/: bug_report.md  release-checklist.md
.github/workflows/: docs.yml  tests.yml
R/: .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.md  pygradethis.Rproj
R/R/: .Rprofile  check_code.R  check_dataframes.R  exercise_checker.R  fail_if_not_found.R  gradethis_placeholder.R  problem.R  py_find_arguments.R  py_find_attributes.R  py_find_functions.R  py_friendly_classes.R  py_hinted_class_messages.R  py_user_object_get.R  pygradethis_setup.R  staticimports.R  utils.R  zzz.R
R/demo/: rscript.R
R/man/: add_global_setup.Rd  check_columns.Rd  check_index.Rd  check_py_dataframe.Rd  check_values.Rd  evaluate_exercise_feedback.Rd  exercise_checker.Rd  find_arguments_mod.Rd  find_attributes_mod.Rd  find_functions.Rd  find_functions_mod.Rd  friendly_class.Rd  get_columns.Rd  get_envir_diff.Rd  get_friendly_class.Rd  get_index.Rd  get_last_value.Rd  get_py_envir.Rd  get_python_result.Rd  get_python_solution.Rd  get_values.Rd  gradethis_exercise_checker.Rd  hinted_class_message.Rd  identical.Rd  index_to_list.Rd  is_CategoricalIndex.Rd  is_DataFrame.Rd  is_Index.Rd  is_MultiIndex.Rd  is_None.Rd  is_RangeIndex.Rd  is_Series.Rd  is_function.Rd  is_numpy_array.Rd  is_placeholder.Rd  is_set.Rd  mock_py_exercise.Rd  prepare_py.Rd  problem.Rd  problem_grade.pygradethis_problem.Rd  (+41 more)
R/tests/: testthat.R
R/tests/testthat/: helpers.R  test-check_dataframes.R  test-exercise_checker.R  test-py_find_arguments.R  test-py_find_functions.R  test-py_friendly_classes.R  test-utils.R  (+3 more)
docs/: _quarto.yml  _sidebar.yml  index.qmd
pygradethis/: __init__.py  check_functions.py  conditions.py  formatters.py  grade_code.py  grade_result.py  message_generators.py  python_grade_learnr.py  python_grader.py  result_checker.py  utils.py
python/: Makefile  README.md  playground.py  pyproject.toml  setup.cfg
python/demo/: pyscript.py
python/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  pygradethis.rst
python/docs/_build/doctrees/: authors.doctree  conduct.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  pygradethis.doctree  pygradethis.tests.doctree
python/docs/_build/html/: .buildinfo  authors.html  conduct.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pygradethis.html  pygradethis.tests.html  search.html  searchindex.js
python/docs/_build/html/_sources/: modules.rst.txt  pygradethis.tests.rst.txt
python/docs/source/: conf.py  index.rst
python/docs/source/api/: pygradethis.conditions.GraderCondition.rst  pygradethis.conditions.python_fail_if.rst  pygradethis.conditions.python_pass_if.rst  pygradethis.feedback.encourage.rst  pygradethis.feedback.praise.rst  pygradethis.grade_code.grade_code.rst  pygradethis.grade_code.rst  pygradethis.grade_result.python_grade_result.rst  pygradethis.grade_result.rst
python/pygradecode/: __init__.py  ast_to_xml.py  find_arguments.py  find_attributes.py  find_functions.py  find_method_calls.py  find_methods.py  find_operators.py  find_utils.py  grade_code_found.py  highlight_text.py  xml_classes.py  xml_utils.py
python/pygradecode/tests/: test_ast_to_xml.py  test_find_arguments.py  test_find_attributes.py  test_find_functions.py  test_find_methods.py
python/pygradethis/: __init__.py  check_functions.py  conditions.py  feedback.py  formatters.py  grade_code.py  grade_result.py  message_generators.py  pygradethis_exercise_checker.py  python_grade_learnr.py  python_grader.py  result_checker.py  utils.py
python/pygradethis/tests/: test_grade_code.py  test_pygradethis_exercise_checker.py  test_python_grade_learnr.py  test_utils.py
python/src/pygradethis/: feedback.py  python_grader.py
test/: test_grade_code.py  test_python_grader.py
(+3 files in other folders)
