[tool.poetry]
name = "pygradethis"
version = "0.2.0"
description = "\"Python autograder to facilitate code output and static code checking.\""
authors = ["nischalshrestha <bitsorific@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nischalshrestha/pygradethis"
repository = "https://github.com/nischalshrestha/pygradethis"
keywords = ["autograder", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.9.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
