[metadata]
name=pygradethis
version = 0.2.1
description = Python autograder to facilitate code output and static code checking.
author = Nischal Shrestha
author_email = nsrocker92@gmail.com
keywords = autograder, education
url = https://github.com/nischalshrestha/pygradethis
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.10
    Topic :: Education

[bumpversion]
current_version = 0.2.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:pygradethis/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1
[tool:pytest]

[options]
packages = find:
include_package_data = True
zipsafe = False
python_requires = >=3.10

[options.packages.find]
include = pygradethis

[options.extras_require]
dev =
    pytest
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    myst-parser
    sphinx-book-theme
extras =
    pandas
